--- a/src/starwars/starwars-api30/starwars-api30.csproj
+++ b/src/starwars/starwars-api30/starwars-api30.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\graphql-aspnet-subscriptions\graphql-aspnet-subscriptions.csproj" />
     <ProjectReference Include="..\..\graphql-aspnet\graphql-aspnet.csproj" />
     <ProjectReference Include="..\starwars-common\starwars-common.csproj" />
   </ItemGroup>
