--- a/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
+++ b/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -54,4 +54,9 @@
   <ItemGroup>
     <ProjectReference Include="..\graphql-aspnet\graphql-aspnet.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middleware\ClientNotification\Components\" />
+    <Folder Include="Middleware\SubscriptionEventExecution\Components\" />
+  </ItemGroup>
 </Project>
