Added test harness for subscriptions

--- a/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
+++ b/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Execution\Subscriptions\Apollo\Middleware\" />
     <Folder Include="Middleware\ClientNotification\Components\" />
     <Folder Include="Middleware\SubscriptionEventExecution\Components\" />
   </ItemGroup>
