added socket connection test harness and abstraction

--- a/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\..\graphql-aspnet\graphql-aspnet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WebSockets\" />
+  </ItemGroup>
+
 </Project>
