--- a/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -36,11 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\graphql-aspnet-subscriptions\graphql-aspnet-subscriptions.csproj" />
     <ProjectReference Include="..\..\graphql-aspnet\graphql-aspnet.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WebSockets\" />
   </ItemGroup>
 
 </Project>
