added additional tests for ClientSubscription

--- a/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
+++ b/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\graphql-aspnet-testframework\graphql-aspnet-testframework.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Execution\ClientSubscriptionTestData\" />
+  </ItemGroup>
+
 </Project>
