--- a/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
+++ b/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -6,7 +6,8 @@
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0019;IDE0017;RCS1146;RCS1194;</NoWarn>
     <RootNamespace>GraphQL.AspNet</RootNamespace>
     <AssemblyName>GraphQL.AspNet.Subscriptions</AssemblyName>
-    <Title>GraphQL ASP.NET WebSockets</Title>
+    <Title>GraphQL ASP.NET Subscriptions</Title>
+    <Company>GraphQL ASP.NET</Company>
     <Product>GraphQL ASP.NET</Product>
     <Authors>Kevin Carroll</Authors>
     <IncludeSymbols>true</IncludeSymbols>
