completed first pass at client/server refactor, stablized messaging.

--- a/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
+++ b/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -59,6 +59,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\TypeSystem\" />
+    <Folder Include="Interfaces\Schema\TypeSystem\" />
   </ItemGroup>
 </Project>
