--- a/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
+++ b/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;RCS1021;IDE0060;IDE0052;IDE0044;IDE0059;IDE0052;IDE0017;IDE0039;RCS1090;RCS1118;SA1601;RCS1163</NoWarn>
+    <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;RCS1021;IDE0060;IDE0052;IDE0044;IDE0059;IDE0052;IDE0017;IDE0039;TCS1089;RCS1090;RCS1118;SA1601;RCS1163</NoWarn>
     <RootNamespace>GraphQL.Subscriptions.Tests</RootNamespace>
     <AssemblyName>graphql-aspnet-subscriptions-tests</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
