fixed dependency version requirements
changed on-board api heads to LTS versions of .net core (2.1, 3.1) and fixed internal dependencies of main library and subscriptions to be compatiable. Removed references to netcoreapp2.2.

--- a/src/starwars/starwars-api22/starwars-api20.csproj
+++ b/src/starwars/starwars-api22/starwars-api20.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603</NoWarn>
     <RootNamespace>GraphQL.AspNet.StarWarsAPI</RootNamespace>
-    <AssemblyName>GraphQL.AspNet.StarWarsAPI22</AssemblyName>
+    <AssemblyName>GraphQL.AspNet.StarWarsAPI2X</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
