directives field invocation completed

--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -25,6 +25,10 @@
     <ContinuousIntegrationBuild Condition="'$(TF_BUILD)' == 'true'">True</ContinuousIntegrationBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Internal\TypeTemplates\DirectiveLifeCycleEventItemExtensions.cs" />
+  </ItemGroup>
+
 <ItemGroup>
   <None Include="..\icon.png">
     <Pack>True</Pack>
