--- a/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
+++ b/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
@@ -65,5 +65,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\DirectiveMiddlewareTestData\" />
+  </ItemGroup>
+
 
 </Project>
