cleaned up the extend process for adding fields. added unit tests

--- a/src/CodeMaid.config
+++ b/src/CodeMaid.config
@@ -73,6 +73,12 @@
             <setting name="Cleaning_RemoveRegions" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="Progressing_ShowBuildProgressOnBuildStart" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Progressing_HideBuildProgressOnBuildStop" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
