converted scalars to be instance per schema, not globally static

--- a/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
+++ b/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Defaults\TypeMakers\CustomScalarTypeRegistrationTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
 
