moved validation-related, doc-construction rules to validation folder

--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -56,4 +56,10 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ValidationRules\RuleSets\DocumentConstruction\InputItemCollectionNodeSteps\" />
+    <Folder Include="ValidationRules\RuleSets\DocumentConstruction\TopLevelNodeSteps\" />
+    <Folder Include="ValidationRules\RuleSets\DocumentConstruction\VariableCollectionNodeSteps\" />
+  </ItemGroup>
 </Project>
