WIP, converting validation steps 22 of 44 complete

--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -71,6 +71,19 @@
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\DocumentLevelSteps\Rule_5_1_1_OnlyExecutableDefinition.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\DocumentLevelSteps\Rule_5_2_1_1_OperationNamesMustBeUnique.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\DocumentLevelSteps\Rule_5_2_2_1_LoneAnonymousOperation.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_3_1_FieldMustExistOnTargetGraphType.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\FieldSelection_DocumentPartCheck.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_3_2_FieldsOfIdenticalOutputMustHaveIdenticalSigs.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_3_3_LeafReturnMustNotHaveChildFields.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_4_2_1_RequiredArgumentMustBeSuppliedOrHaveDefaultValueOnField.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryDirectiveSteps\Rule_5_4_2_1_RequiredArgumentMustBeSuppliedOrHaveDefaultValueOnDirective.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_1_FragmentNamesMustBeUnique.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_2_NamedFragmentGraphTypeMustExistInTheSchema.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_2_InlineFragmentGraphTypeMustExistInTheSchema.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_3_FragmentTargetTypeMustBeOfAllowedKind.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_4_AllDeclaredFragmentsMustBeUsed.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryInputArgumentSteps\Rule_5_4_1_ArgumentMustBeDefinedOnTheField.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryInputArgumentSteps\Rule_5_4_2_ArgumentMustBeUniquePerInvocation.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_1_1_ExecutableOperationDefinition.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_2_3_1_1_SubscriptionsRequire1EncounteredSubscriptionField.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_2_3_1_SubscriptionsRequire1RootField.cs" />
