--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -77,16 +77,25 @@
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_3_3_LeafReturnMustNotHaveChildFields.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\FieldSelectionSteps\Rule_5_4_2_1_RequiredArgumentMustBeSuppliedOrHaveDefaultValueOnField.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryDirectiveSteps\Rule_5_4_2_1_RequiredArgumentMustBeSuppliedOrHaveDefaultValueOnDirective.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\RuleBase_5_5_2_3_FragmentCanSpreadInContext.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_1_FragmentNamesMustBeUnique.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_2_NamedFragmentGraphTypeMustExistInTheSchema.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_2_InlineFragmentGraphTypeMustExistInTheSchema.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_3_FragmentTargetTypeMustBeOfAllowedKind.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_1_4_AllDeclaredFragmentsMustBeUsed.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_1_SpreadOfNamedFragmentMustExist.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_2_SpreadingANamedFragmentMustNotFormCycles.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_3_1_ObjectFragmentSpreadInObjectCanSpreadInContext.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_3_2_AbstractFragmentSpreadInObjectCanSpreadInContext.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_3_3_ObjectFragmentSpreadInAbstractCanSpreadInContext.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryFragmentSteps\Rule_5_5_2_3_4_AbstractFragmentSpreadInAbstractCanSpreadInContext.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryInputArgumentSteps\Rule_5_4_1_ArgumentMustBeDefinedOnTheField.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryInputArgumentSteps\Rule_5_4_2_ArgumentMustBeUniquePerInvocation.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryInputValueSteps\Rule_5_6_1_ValueMustBeCoerceable.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_1_1_ExecutableOperationDefinition.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_2_3_1_1_SubscriptionsRequire1EncounteredSubscriptionField.cs" />
     <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_2_3_1_SubscriptionsRequire1RootField.cs" />
+    <Compile Include="RulesEngine\RuleSets\DocumentValidation\QueryOperationSteps\Rule_5_2_OperationTypeMustBeDefinedOnTheSchema.cs" />
   </ItemGroup>
 
   <ItemGroup>
