--- a/.github/workflows/nuget-deployment.yml
+++ b/.github/workflows/nuget-deployment.yml
@@ -100,6 +100,6 @@ jobs:
       # ---------------------------------------        
       # Deploy to Nuget
       # ---------------------------------------
-      # - name: Publish To Nuget 
-      #  run: dotnet nuget push "${{env.OUTPUT_DIR}}/*.nupkg" --source 'https://api.nuget.org/v3/index.json' --api-key "${{env.NUGET_KEY}}"
+      - name: Publish To Nuget 
+        run: dotnet nuget push "${{env.OUTPUT_DIR}}/*.nupkg" --source 'https://api.nuget.org/v3/index.json' --api-key "${{env.NUGET_KEY}}"
 
