WIP, initial refactoring done.

--- a/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
+++ b/src/tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
@@ -16,6 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ServerProtocols\GraphQLWS\**" />
+    <EmbeddedResource Remove="ServerProtocols\GraphQLWS\**" />
+    <None Remove="ServerProtocols\GraphQLWS\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
 
@@ -37,6 +43,7 @@
 
   <ItemGroup>
     <Folder Include="Execution\ClientSubscriptionTestData\" />
+    <Folder Include="ServerProtocols\" />
   </ItemGroup>
 
 </Project>
