WIP, project updates to support .NET 7

--- a/src/starwars/starwars-api70/Properties/launchSettings.json
+++ b/src/starwars/starwars-api70/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "StarWars: .NET Core 3.x": {
+    "StarWars: .NET 7": {
       "commandName": "Project",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
