--- a/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
+++ b/src/tests/graphql-aspnet-tests/graphql-aspnet-tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net6.0;netcoreapp3.1;</TargetFrameworks>
+	  <TargetFrameworks>net7.0;net6.0;netcoreapp3.1;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;RCS1021;IDE0060;IDE0052;IDE0044;IDE0059;IDE0052;IDE0017;IDE0039;RCS1090;RCS1118;SA1601;RCS1163</NoWarn>
     <RootNamespace>GraphQL.AspNet.Tests</RootNamespace>
