--- a/.github/workflows/nuget-deployment.yml
+++ b/.github/workflows/nuget-deployment.yml
@@ -15,8 +15,6 @@ on:
         type: string
       
 env: 
-  DOTNET_CURRENT: 6.x
-  DOTNET_LTS: 3.1.x
   SLN_PATH: ./src/graphql-aspnet.sln  
   PRIMARY_LIB_PATH: ./src/graphql-aspnet/graphql-aspnet.csproj
   SUBSCRIPTIONS_LIB_PATH: ./src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -37,14 +35,12 @@ jobs:
       # Install .NET Versions
       # ---------------------------------------
       - uses: actions/setup-dotnet@v2
-        name: Install .NET (${{env.DOTNET_LTS}})
+        name: Install .NET
         with:
-          dotnet-version: ${{env.DOTNET_LTS}}
-
-      - uses: actions/setup-dotnet@v2
-        name: Install .NET (${{env.DOTNET_CURRENT}})
-        with:
-          dotnet-version: ${{env.DOTNET_CURRENT}}
+          dotnet-version: |
+            3.1.x
+            6.x
+            7.x
 
       # ---------------------------------------
       # Configure the build environment
