--- a/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net7.0;net6.0;netcoreapp3.1</TargetFrameworks>
+	  <TargetFrameworks>net7.0;net6.0;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0019;RCS1146;RCS1194</NoWarn>
     <RootNamespace>GraphQL.AspNet.Tests.Framework</RootNamespace>
