WIP, added strong naming to build process
Also updated /// docs

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -55,7 +55,7 @@ jobs:
         run: dotnet restore ${{ env.SLN_PATH }}
 
       - name: Build Solution
-        run: dotnet build ${{ env.SLN_PATH }} --configuration Release --no-restore
+        run: dotnet build ${{ env.SLN_PATH }} --no-restore
 
       - name: Test Solution
         run: dotnet test ${{ env.SLN_PATH }} --no-restore
