--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -1,47 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\library-common.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0019;IDE0017;RCS1146;RCS1194;</NoWarn>
-    <RootNamespace>GraphQL.AspNet</RootNamespace>
     <AssemblyName>GraphQL.AspNet</AssemblyName>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <Company>GraphQL ASP.NET</Company>
     <Title>GraphQL ASP.NET</Title>
-    <Product>GraphQL ASP.NET</Product>
-    <Authors>Kevin Carroll</Authors>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Deterministic>true</Deterministic>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>GraphQL.AspNet</PackageId>
-    <PackageIcon>icon.png</PackageIcon>
     <PackageDescription>GraphQL ASP.NET is a fully functional GraphQL library that utilizes a controller/action programming model similar to ASP.NET.</PackageDescription>
-    <PackageProjectUrl>https://graphql-aspnet.github.io/</PackageProjectUrl>
-    <PackageTags>GraphQL ASPNET graphql ASP.NET mvc dotnet core</PackageTags>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/graphql-aspnet/graphql-aspnet</RepositoryUrl>
-  </PropertyGroup>
-
-    <ItemGroup>
-      <None Include="..\icon.png" Pack="true" PackagePath="\" />
-      <None Include="..\..\build\nuget-package-readme.md" Pack="true" PackagePath="\README.md" />
-    </ItemGroup>
-
-  <PropertyGroup>
-    <CodeAnalysisRuleSet>..\styles.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="..\stylecop.json" />
-  </ItemGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\build\graphql-aspnet-sn.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -57,7 +21,6 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Caching" Version="4.6.0" />
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 
   </ItemGroup>
 </Project>
