--- a/src/unit-tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
+++ b/src/unit-tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Execution\ClientSubscriptionTestData\" />
+    <Folder Include="SubscriptionServer\ClientSubscriptionTestData\" />
   </ItemGroup>
 
 </Project>
