WIP, final namespace updates (hopefully)

--- a/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
+++ b/src/graphql-aspnet-subscriptions/graphql-aspnet-subscriptions.csproj
@@ -32,4 +32,8 @@
   <ItemGroup>
     <ProjectReference Include="..\graphql-aspnet\graphql-aspnet.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Extensions\" />
+  </ItemGroup>
 </Project>
