--- a/src/ancillary-projects/benchmarking/graphql-aspnet-benchmarks/graphql-aspnet-benchmarks.csproj
+++ b/src/ancillary-projects/benchmarking/graphql-aspnet-benchmarks/graphql-aspnet-benchmarks.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0060;IDE0052;IDE0044;IDE0059;IDE0052;IDE0017;IDE0039</NoWarn>
     <RootNamespace>GraphQL.AspNet.Benchmarks</RootNamespace>
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <CodeAnalysisRuleSet>..\..\styles.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\..\styles.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="..\..\stylecop.json" />
+    <AdditionalFiles Include="..\..\..\stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
