--- a/src/unit-tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
+++ b/src/unit-tests/graphql-aspnet-subscriptions-tests/graphql-aspnet-subscriptions-tests.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net7.0;net6.0;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;RCS1021;IDE0060;IDE0052;IDE0044;IDE0059;IDE0052;IDE0017;IDE0039;TCS1089;RCS1090;RCS1118;SA1601;RCS1163</NoWarn>
-    <RootNamespace>GraphQL.Subscriptions.Tests</RootNamespace>
+    <RootNamespace>GraphQL.AspNet.Subscriptions.Tests</RootNamespace>
     <AssemblyName>graphql-aspnet-subscriptions-tests</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsTestProject>true</IsTestProject>
