--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -10,10 +10,12 @@
 
   <ItemGroup>
     <Content Include="ServerExtensions/MultipartRequests/**/*.*" />
+    <Content Include="Common/JsonNodes/**/*.*" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <Compile Remove="ServerExtensions/MultipartRequests/**/*.*" />
+    <Compile Remove="Common/JsonNodes/**/*.*" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +36,10 @@
     <PackageReference Include="System.Text.Encodings.Web" Version="4.7.2" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.2" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Exceptions\" />
   </ItemGroup>
 
 </Project>
